(lang dune 3.23)

(name bank)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "wakaranakattari <wakaranakattari@google.com>")

(maintainers "wakaranakattari <wakaranakattari@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bank)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
