(lang dune 3.23)

(name mucbank)

(generate_opam_files true)

(source
 (github wakaranakattari/mucbank))

(authors 
  "wakaranakattari <wakaranakattari@google.com>"
  "nuclear878 <wakaranakattari@google.com>")

(maintainers 
  "wakaranakattari <wakaranakattari@gmail.com>"
  "nuclear878 <kirilsamadov1@gmail.com>")

(license MIT)

(package
 (name mucbank)
 (allow_empty)
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))